                         - Module: Provide a 'module factory reset' command to erase config store
                         - Webserver: warn user about unchanged password, change coupled AP password
                         - OTA: web UI
                         - Network: Try to set default interface based on WifiSTA>Modem priority
                         - Wifi: Fix to APCLIENT mode STA reconnect
                         - Wifi: Fix to display of IP and MAC addresses in APCLIENT mode

2018-03-05 MWJ  3.0.991  OTA release support OTA updates over HTTP
                         - Update ovms_module to use new API for per-task heap info.
                         - Commands "time status" and "time set" for access to real-time clock.
                         - Time zone support in config vehicle/timezone
                           See GNU LIBC documentation for details on format
                           https://www.gnu.org/software/libc/manual/html_node/TZ-Variable.html
                         - Auto start/init for wifi, modem, vehicle type, server v2 & v3
                         - Fix to SDCARD component to free SD_DATA1, SD_DATA2, and SD_DATA3
                           in 1-line mode (in particular so SD_DATA1/GPIO4 and SD_DATA3/GPIO13
                           can be used for UART to simcom modem for OVMS v3.1 hardware).
                           https://www.esp32.com/viewtopic.php?f=13&t=4838
                         - Record statistics for CAN bus interrupts (per controller) and show in status.
                         - Don't issue network.reconfigured event when network is down.
                         - Auto start for ext12v & obd2ecu
                         - Web config for timezone & distance units
                         - Twizy web UI for features, battery properties & charge control
                         - Support ESP IDF v3 style OTA updates over http

2018-02-21 MWJ  3.0.990  Handle case of SIMCOM modem MUX down during data states